<resources>
    <string name="app_name_acdc">IPT Retail</string>
    <string name="app_name_FieldX" translatable="false">FieldX</string>
    <string name="app_name_sisal">Sisal Retail</string>
    <string name="app_name_Unl">УНЛ</string>
    <string name="app_name_Unl_test">УНЛ тест</string>
    <string name="app_name_cameroon">Camwin Lotto</string>
    <string name="app_name_paypr">Paypr Business</string>
    <string name="app_name_ola_myanmar">Retail App GLG</string>
    <string name="failed_to_load_modules_list">Failed to load Modules List</string>
    <string name="some_internal_error">Some technical error, try later!</string>
    <string name="oops">Oops!</string>
    <string name="home">HOME</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_username">Enter UserName</string>
    <string name="login">Login</string>
    <string-array name="moduleList">
        <item>USER</item>
        <item>REPORTS</item>
        <item>DRAW_GAME</item>
        <item>SCRATCH</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="virn_number">VIRN Number</string>
    <string name="scanning_problem">Problem in scanning.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="allow_permission">You need to allow access permissions!</string>
    <string name="something_went_wrong">Something went wrong, try again later!</string>
    <string name="something_went_login_again">Something went wrong, please login again!</string>
    <string name="enter_ticket_number">Enter Ticket Number</string>
    <string name="enter_book_number">Enter Book Number</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="required_filed">Required Field</string>
    <string name="password_mismatch">Password doesn\'t match!</string>
    <string name="pin_mismatch">PIN doesn\'t match!</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="password_changed_success">Password/PIN changed successfully.</string>
    <string name="pin_changed_success">PIN changed successfully.</string>
    <string name="password_min_length">%1$s must be minimum of %2$d characters.</string>
    <string name="same_old_new_password"><![CDATA[Old password & new password cannot be same.]]></string>
    <string name="same_old_new_pin"><![CDATA[Old PIN & new PIN cannot be same.]]></string>
    <string name="start_date">Start Date</string>
    <string name="from_date">From Date</string>
    <string name="end_date">End Date</string>
    <string name="to_date">To Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="error_fetching_gamelist">Error in fetching Game List.</string>
    <string name="invalid_ticket">Invalid Ticket</string>
    <string name="invalid_book">Invalid Book</string>
    <string name="no_games_found">No Games Found</string>
    <string name="invalid_ticket_length">Invalid Ticket Length</string>
    <string name="invalid_book_length">Invalid Book Number Length</string>
    <string name="successfully_ticket_sold">Ticket Sold Successfully!</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="confirm">Confirm</string>
    <string name="number_of_books">Number of Books</string>
    <string name="number_of_packs">Number of Books</string>
    <string name="are_you_sure_you_want_nto_confirm_the_order">Are you sure you want \n to confirm the order?</string>
    <string name="back">Back</string>
    <string name="no_game_found">No Game Found</string>
    <string name="book_number">Book Number</string>
    <string name="pack_number">Book Number</string>
    <string name="verify">Verify</string>
    <string name="challan_number">Challan Number</string>
    <string name="enter_challan_number">Enter Challan Number</string>
    <string name="books">Books</string>
    <string name="select_all">Select All</string>
    <string name="done">Done</string>
    <string name="done_sale">Done</string>
    <string name="no_books_found">No books found.</string>
    <string name="no_books_selected">No books selected!</string>
    <string name="ticket_number_colon">Ticket Number:</string>
    <string name="winning_amt_colon">Winning Amount:</string>
    <string name="tds_amt_colon">TDS Amount:</string>
    <string name="net_amt_colon">Net Amount: $\u0020</string>
    <string name="claim_ticket">Claim Ticket</string>
    <string name="trans_num_colon">Invoice Number:</string>
    <string name="tds_percentage">TDS Percentage: </string>
    <string name="net_winning_amt">Net Winning Amount:</string>
    <string name="trans_date_colon">Invoice Date:</string>
    <string name="claim_successful">Claim Successful</string>
    <string name="login_gain">Some technical issue. Please login again!</string>
    <string name="generate_order">Generate Order</string>
    <string name="barcode_number">Barcode Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="click_here"><u>Click Here</u></string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="image">image</string>
    <string name="total_amount">Total Amount:</string>
    <string name="game_number">Game Number</string>
    <string name="game_name">Game Name</string>
    <string name="success">Success</string>
    <string name="search_result">Search Result</string>
    <string name="service_error">Service Error</string>
    <string name="unable_to_draw_challan">Unable To Draw Challan Data</string>
    <string name="your_challan_number">Your Challan Number</string>
    <string name="received_books">Received Books</string>
    <string name="received_packs">Received Books</string>
    <string name="selected_books">Selected Books</string>
    <string name="selected_packs">Selected Books</string>
    <string name="receiving_now">Receiving Now</string>
    <string name="already_received">Already Received</string>
    <string name="select">Select</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="problem_in_loggin_in">Problem logging in. Try again later!</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_username">Mobile Number / Username</string>
    <string name="username">User Name</string>
    <string name="url_problem">Something wrong with url. Try again later!</string>
    <string name="ola">OLA</string>
    <string name="deposit">DEPOSIT</string>
    <string name="withdrawal">WITHDRAWAL</string>
    <string name="registration">REGISTRATION</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="deposit_amt">Deposit Amt.</string>
    <string name="one_time_password">One Time Password</string>
    <string name="this_field_cannot_be_empty">This field cannot be empty.</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="successfully_registered">Successfully Registered</string>
    <string name="registered_success">REGISTERED SUCCESSFULLY</string>
    <string name="available_balance">Available Balance:</string>
    <string name="withdrawal_amount">Withdrawal Amount</string>
    <string name="didn_t_receive_otp">Didn\'t receive otp?</string>
    <string name="player_registered_success">Player Registered Successfully!</string>
    <string name="player_registered_success_with_info">Player Registered Successfully!\nPlayer will receive login details via SMS.</string>
    <string name="credentials_sent">(Credentials with 6 digit pin has been sent to Registered Mobile Number)</string>
    <string name="amt_deposit_success">Amount Deposited Successfully!</string>
    <string name="check_internet_connection">Please check your internet connection and try again.</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="amt_withdraw_success">Amount Withdrawn Successfully!</string>
    <string name="login_error">LOGIN ERROR</string>
    <string name="deposit_error">DEPOSIT ERROR!</string>
    <string name="deposit_error_without_colon">Deposit Error</string>
    <string name="withdrawal_error">WITHDRAWAL ERROR!</string>
    <string name="pack_return_error">PACK RETURN</string>
    <string name="registration_error">REGISTRATION ERROR!</string>
    <string name="user_name">User Name</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_pin_title">Forgot PIN</string>
    <string name="otp_success_sent_to">OTP successfully sent to</string>
    <string name="password_doesnot_match">Password doesn\'t match</string>
    <string name="hello">Hello,</string>
    <string name="your_user_id">User Id:</string>
    <string name="serial_number">Serial Number</string>
    <string name="device_type">Device Type</string>
    <string name="select_device_type">Select Device Type</string>
    <string name="invalid_device_type">Invalid Device Type</string>
    <string name="organization">Organization:</string>
    <string name="dates">Dates</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="to_small">to</string>
    <string name="n_a">N.A.</string>
    <string name="transaction_id">Transaction Id:</string>
    <string name="from_date_greater_than_to_date">From date must be equal to or smaller than To date</string>
    <string name="device_registered_successfully">Device Registered Successfully</string>
    <string name="type">Type:</string>
    <string name="by">By:</string>
    <string name="bal">Bal:</string>
    <string name="balance">Balance:</string>
    <string name="balance_without_colon">Balance</string>
    <string name="balance_place_holder">Balance: %s</string>
    <string name="balance_cation">Balance</string>
    <string name="no_data_found">No data found</string>
    <string name="provide_any_detail">Please provide any of the above detail.</string>
    <string name="limit_col">(Limit: %s)</string>
    <string name="limit_colon">Limit: %s</string>
    <string name="limit">Limit:</string>
    <string name="version">Version:</string>
    <string name="resend_otp_timer">(Resend OTP in %s seconds)</string>
    <string name="otp_sent_successfully">OTP Sent Successfully</string>
    <string name="default_country_code">+1</string>
    <string name="country_codes">Country Codes</string>
    <string name="press_ok_to_proceed">Press OK to proceed.</string>
    <string name="in_transit">In-Transit</string>
    <string name="received">Received</string>
    <string name="activated">Activated</string>
    <string name="invoiced">Invoiced</string>
    <string name="name">Name</string>
    <string name="reprint">Reprint</string>
    <string name="result">Result</string>
    <string name="date_selection">Select Date</string>
    <string name="player_registered_successfully">Registered Successfully</string>
    <string name="are_you_sure_you_want_to_reprint_the_ticket">Are you sure, you want to reprint the ticket?</string>
    <string name="from_time">From Time</string>
    <string name="to_time">To Time</string>
    <string name="show_result">Show Result</string>
    <string name="ticket_price">Ticket Price</string>
</resources>