<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:background="@drawable/rounded_corners"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_success"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_registered_successfully"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorGreen"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:gravity="center"
        android:text="@string/user_name"
        android:textColor="@color/colorLightestGrey"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="@color/colorDarkGrey"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/colorLightestGrey"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="@color/colorDarkGrey"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tvDepositAmountTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:gravity="center"
        android:text="@string/deposit_amount"
        android:textColor="@color/colorLightestGrey"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvDepositAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="@color/colorDarkGrey"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tvRetailerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:gravity="center"
        android:textStyle="italic"
        android:textColor="@color/colorLightGrey"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="16sp"
        android:background="@drawable/button_rounded_bg"
        android:text="@string/done"
        android:textColor="@color/colorWhite" />

</LinearLayout>
