<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:background="@drawable/rounded_corners"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="30dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_success"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/colorGreen"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/colorDarkGrey"
        android:layout_marginBottom="30dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llAdditionalDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/colorDarkGrey"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/tv_org_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorDarkGrey"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/ticket_price"
        android:textColor="@color/colorDarkGrey"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/tvTicketPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorDarkGrey"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/ticket_number"
        android:textColor="@color/colorDarkGrey"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/tvTicketNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorDarkGrey"
        android:layout_marginBottom="15dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="16sp"
        android:background="@drawable/button_rounded_bg"
        android:text="@string/done_sale"
        android:textColor="@color/colorWhite" />

</LinearLayout>
