<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llContainer"
    android:layout_margin="30dp"
    android:background="@drawable/rounded_corners"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="30dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:src="@drawable/icon_quick_order" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorLightGrey"
        android:text="@string/number_of_packs" />

    <TextView
        android:id="@+id/tvNoOfBooks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/colorDarkGrey"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorDarkGrey" />

    <TextView
        android:id="@+id/tvCommission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/colorDarkGrey" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLightGrey"
        android:text="@string/are_you_sure_you_want_nto_confirm_the_order" />

    <Button
        android:id="@+id/btn_Pay"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="16sp"
        android:background="@drawable/button_rounded_bg"
        android:text="@string/generate_order"
        android:textColor="@color/colorWhite" />


</LinearLayout>
