<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llContainer"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:layout_margin="30dp"
    android:background="@drawable/rounded_corners"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvBookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/books"
        android:textColor="@color/colorDarkGrey"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorDarkGrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvInTransit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="12sp"
            android:textColor="@color/colorDarkGrey"
            android:text="@string/in_transit"/>

        <TextView
            android:id="@+id/tvReceived"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="12sp"
            android:textColor="@color/colorDarkGrey"
            android:text="@string/received"/>

        <TextView
            android:id="@+id/tvActivated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="12sp"
            android:textColor="@color/colorDarkGrey"
            android:text="@string/activated"/>

        <TextView
            android:id="@+id/tvInvoiced"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="12sp"
            android:textColor="@color/colorDarkGrey"
            android:text="@string/invoiced"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="12dp"
        android:background="#cccccc" />

    <TextView
        android:id="@+id/tvPacks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:lineSpacingMultiplier="1.2"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textStyle="bold"
        android:scrollbars="vertical"
        android:maxHeight="300dp"
        android:singleLine="false"
        android:textSize="14sp"/>

</LinearLayout>