<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/round_dialog_activity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:background="#012161"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="#ffc400"
        android:textSize="@dimen/_12sdp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/rv_draw_game"
        android:orientation="horizontal"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="sans-serif"
        android:id="@+id/resultSelection"
        android:gravity="center"
        android:textColor="#606060"
        android:textSize="14sp"
        android:textStyle="normal"
        android:text="Select date time to print Thai Lottery result" />


    <EditText
        android:id="@+id/et_date_selection"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_20sdp"
        android:drawableRight="@drawable/monthly_calendar"
        android:editable="false"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/round_edit_text"
        android:text="@string/date_selection"
        android:textColor="#666666"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_from_time"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_20sdp"
            android:drawableRight="@drawable/clock"
            android:drawablePadding="5dp"
            android:maxLines="1"
            android:text="@string/from_time"
            android:padding="8dp"

            android:background="@drawable/round_edit_text"
            android:textColor="#666666"
            android:textSize="16sp" />


        <View
            android:layout_width="@dimen/_10sdp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="#606060" />


        <EditText
            android:id="@+id/et_to_time"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_20sdp"
            android:drawableRight="@drawable/clock"
            android:inputType="number"
            android:maxLines="1"

            android:padding="8dp"
            android:background="@drawable/round_edit_text"
            android:text="@string/to_time"
            android:drawablePadding="10dp"
            android:textColor="#666666"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_print"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/button_rounded_bg"
            android:text="@string/show_result"
            android:layout_marginLeft="@dimen/_12sdp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/round_button_white"
            android:text="@string/cancel"
            android:layout_marginLeft="@dimen/_15sdp"
            android:textColor="#d30e24"
            android:textSize="16sp" />


    </LinearLayout>


</LinearLayout>
